--- a/.github/workflows/wShopWorkflow.yml
+++ b/.github/workflows/wShopWorkflow.yml
@@ -61,6 +61,12 @@ jobs:
       run: dotnet build ./eShopOnWeb.sln --configuration Release
     - name: Test
       run: dotnet test ./eShopOnWeb.sln --configuration Release
+  buildPushAppImage:
+    name: Build and Push to ACR
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2   
     - name: Azure Container Registry Login
       uses: Azure/docker-login@v1
       with:
@@ -70,3 +76,8 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD}}
         # Container registry server url
         login-server: ${{ secrets.ACR_SERVER}}
+    - run: |
+        docker build -f src/Web/Dockerfile . -t ${{ secrets.ACR_SERVER}}/eshop:${{ github.run_id}}
+        docker push ${{ secrets.ACR_SERVER}}/eshop:${{ github.run_id}}
+      
+      
